--- a/anagrama-cli/package.json
+++ b/anagrama-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anagrama",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "description": "Terminal client for Anagrama",
   "type": "module",
   "license": "MIT",
@@ -15,13 +15,11 @@
     "anagrama": "dist/index.js"
   },
   "files": [
-    "dist",
-    "scripts"
+    "dist"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "postinstall": "node scripts/postinstall.cjs"
+    "start": "node dist/index.js"
   },
   "engines": {
     "node": ">=18"
