--- a/anagrama-cli/package.json
+++ b/anagrama-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anagrama",
-  "version": "0.1.8",
+  "version": "0.1.29",
   "description": "Terminal client for Anagrama",
   "type": "module",
   "license": "MIT",
@@ -26,9 +26,9 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
+    "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
-    "keytar": "^7.9.0",
     "open": "^9.1.0"
   },
   "devDependencies": {
